// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/StepList/Step NextButtonWithDisabled smoke-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1">
    <li class="_step_t28i0_1 _step_active_t28i0_50">
      <div class="_stepSideWrapper_t28i0_143"
           tabindex="-1"
           aria-current="step"
      >
        <span class="_stepCircle_t28i0_196
      _stepCircle_active_t28i0_221">
          1
        </span>
        <div class="_stepLine_t28i0_1">
        </div>
      </div>
      <h3 id="steptitle-:rb:"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_t28i0_75"
      >
        tittel
      </h3>
      <div class="_stepContent_t28i0_86 _stepContent_noButton_t28i0_94">
        <div>
          Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
        </div>
      </div>
      <div class="_nextLine_t28i0_281">
      </div>
      <span class="_buttonWrapper_t28i0_277">
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
                disabled
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            Neste
          </span>
        </button>
      </span>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step NextButtonWithSpinner smoke-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1">
    <li class="_step_t28i0_1 _step_active_t28i0_50">
      <div class="_stepSideWrapper_t28i0_143"
           tabindex="-1"
           aria-current="step"
      >
        <span class="_stepCircle_t28i0_196
      _stepCircle_active_t28i0_221">
          1
        </span>
        <div class="_stepLine_t28i0_1">
        </div>
      </div>
      <h3 id="steptitle-:r9:"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_t28i0_75"
      >
        tittel
      </h3>
      <div class="_stepContent_t28i0_86 _stepContent_noButton_t28i0_94">
        <div>
          Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
        </div>
      </div>
      <div class="_nextLine_t28i0_281">
      </div>
      <span class="_buttonWrapper_t28i0_277">
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69 _hide_6ybyo_149">
            Neste
          </span>
          <div aria-live="polite"
               aria-atomic="true"
               class="_spinner_wnf1f_5 _spinner_white_wnf1f_19 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_6ybyo_153"
          >
            <div class="_spinnerAnimation_wnf1f_40">
            </div>
            <span id="title-:ra:"
                  class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66"
            >
              Laster inn
            </span>
          </div>
        </button>
      </span>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step WithAttributes play-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1">
    <li id="htmlid"
        class="_step_t28i0_1 _step_passive_t28i0_55 dummyClassname"
        lang="nb"
        data-testid="123ID"
    >
      <div class="_stepSideWrapper_t28i0_143"
           id="htmlid-focus-target"
           tabindex="-1"
      >
        <span class="_stepCircle_t28i0_196
      _stepCircle_passive_t28i0_218">
          1
        </span>
        <div class="_stepLine_t28i0_1">
        </div>
      </div>
      <h3 id="steptitle-htmlid"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_t28i0_75"
      >
        title
      </h3>
      <div class="_stepContent_t28i0_86 _stepContent_noButton_t28i0_94">
        <div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step WithEditAccessibleDescription play-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1">
    <li class="_step_t28i0_1 _step_active_t28i0_50">
      <div class="_stepSideWrapper_t28i0_143"
           tabindex="-1"
           aria-current="step"
      >
        <span class="_stepCircle_t28i0_196
      _stepCircle_active_t28i0_221">
          1
        </span>
        <div class="_stepLine_t28i0_1">
        </div>
      </div>
      <h3 id="steptitle-:r7:"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_t28i0_75"
      >
        tittel
      </h3>
      <div class="_stepContent_t28i0_86">
        <div>
          Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
        </div>
        <button class="_button_r1hjf_1 _button_withIconLeft_r1hjf_8  _stepEditButton_t28i0_46"
                data-brightness="default"
                type="button"
                aria-describedby="steptitle-:r7:"
        >
          <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
            </path>
          </svg>
          <span class>
            Endre
          </span>
        </button>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step WithFullWidthResult smoke-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1">
    <li class="_step_t28i0_1 _step_neutralResult_t28i0_60">
      <div class="_stepSideWrapper_t28i0_143 _stepSideWrapper_result_t28i0_152"
           tabindex="-1"
           aria-current="step"
      >
        <span class="_stepCircle_t28i0_196
      _stepCircle_neutralResult_t28i0_235">
          <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _stepCircleIcon_t28i0_244"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r6:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r6:">
              Fullført
            </title>
            <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
            </path>
          </svg>
        </span>
        <div class="_stepLine_t28i0_1 _stepLine_neutralResult_t28i0_1">
        </div>
      </div>
      <h3 id="steptitle-:r5:"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_t28i0_75"
      >
        jeg er en tittel
      </h3>
      <div class="_stepContent_t28i0_86 _stepContent_noButton_t28i0_94 _stepContent_neutralResult_t28i0_106 _stepContent_fullWidth_t28i0_134">
        <div>
          Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step WithIconTitleAS play-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1">
    <li class="_step_t28i0_1 _step_active_t28i0_50">
      <div class="_stepSideWrapper_t28i0_143"
           tabindex="-1"
           aria-current="step"
      >
        <span class="_stepCircle_t28i0_196
      _stepCircle_active_t28i0_221">
          <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _stepCircleIcon_t28i0_244"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r3:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r3:">
              svg-tittel
            </title>
            <path d="M6 2h12v6l-4 4 4 4v6H6v-6l4-4-4-4V2Zm10 14.5-4-4-4 4V20h8v-3.5Zm-4-5 4-4V4H8v3.5l4 4ZM10 6h4v.75l-2 2-2-2V6Z">
            </path>
          </svg>
        </span>
        <div class="_stepLine_t28i0_1">
        </div>
      </div>
      <h2 id="steptitle-:r2:"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_t28i0_75"
      >
        jeg er en tittel
      </h2>
      <div class="_stepContent_t28i0_86 _stepContent_noButton_t28i0_94">
        <div>
          Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step WithRef play-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1">
    <li class="_step_t28i0_1 _step_passive_t28i0_55"
        id="dummyIdForwardedFromRef"
    >
      <div class="_stepSideWrapper_t28i0_143"
           tabindex="-1"
      >
        <span class="_stepCircle_t28i0_196
      _stepCircle_passive_t28i0_218">
          1
        </span>
        <div class="_stepLine_t28i0_1">
        </div>
      </div>
      <h3 id="steptitle-:r0:"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_t28i0_75"
      >
        title
      </h3>
      <div class="_stepContent_t28i0_86 _stepContent_noButton_t28i0_94">
        <div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;
